some changes on the index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Hi Abebe</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias quam illum, optio praesentium nihil minus eos temporibus quisquam fugiat quas libero nulla tempore autem, assumenda eum, eaque iure deserunt modi!</p>
+    <h2>This is a heading</h2>
   </body>
 </html>
